# techstruck-rs

./: .gitignore  Cargo.toml
config/: rtfm.json
src/: common.rs  main.rs
src/groups/: ansi.rs  help.rs  mod.rs  rtfm.rs  run.rs
src/groups/admin/: mod.rs  register.rs
src/groups/utils/: age.rs
src/lua/: command.rs  mod.rs
src/lua/types/: channel.rs  context.rs  guild.rs  macros.rs  message.rs  mod.rs  role.rs  time.rs  toluadata.rs  user.rs
src/util/: ansi.rs  message.rs
