[package]
name = "techstruck-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[dependencies]
anyhow = "1.0"
poise = "0.3.0"
regex = "1.6.0"
flate2 = "1.0"
bytes = "1.2.1"
ngrammatic = "0.4.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
reqwest = { version = "0.11.11" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = { version = "1.0.83" }

